--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>As a Cloud Architect at Liberty Mutual Insurance, I specialize in cloud infrastructure with expertise in AWS, React, and Node.js. I lead agile, CI/CD-driven projects, mentor teams, and shape technology directions for scalable, high-performance solutions.</p>
+            <p>As a Cloud Architect, I specialize in cloud infrastructure with expertise in AWS, React, and Node.js. I lead agile, CI/CD-driven projects, mentor teams, and shape technology directions for scalable, high-performance solutions.</p>
         </section>
         <section id="projects">
             <h2>Projects</h2>
